--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,15 @@ dependencies:
     sdk: flutter
   http: ^1.2.2 
   
-  dash_chat_2: ^0.0.18
-  chat_gpt_sdk: ^3.0.7
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_gemini: ^2.0.3
+  image_picker: ^1.0.7
+  dash_chat_2: ^0.0.20
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,7 @@ flutter:
   assets:
     - assets/ai_image.png 
     - assets/login.png
+    - assets/log.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
