--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/ai_image.png 
     - assets/login.png
     - assets/log.png
+    - assets/historique.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
